--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,111 @@
 
 @layer components {
   .dropdown {
-    @apply -left-7.5 mt-2 hidden min-w-max flex-col gap-4 rounded-md border border-stroke bg-white px-8 py-5 shadow-solid-13 duration-300 ease-in dark:border-strokedark dark:bg-black xl:invisible xl:absolute xl:mt-0 xl:flex xl:w-[250px] xl:translate-y-10 xl:opacity-0 xl:before:absolute xl:before:-top-1.5 xl:before:left-10 xl:before:h-3 xl:before:w-3 xl:before:rotate-45 xl:before:border-l xl:before:border-t xl:before:border-stroke xl:before:bg-white xl:group-hover:visible xl:group-hover:translate-y-6.5 xl:group-hover:opacity-100 xl:dark:before:border-strokedark xl:dark:before:bg-black;
+    @apply flex-col gap-4 min-w-max lg:flex-row lg:gap-0;
+  }
+
+  .dropdown-btn {
+    @apply flex items-center justify-between gap-2 py-2 lg:py-7.5;
+  }
+
+  .dropdown-title {
+    @apply text-black dark:text-white hover:text-primary;
+  }
+
+  .hero-title {
+    @apply text-3xl font-bold text-black dark:text-white sm:text-4xl md:text-5xl xl:text-hero;
+  }
+
+  .hero-subtitle {
+    @apply text-lg font-medium text-black dark:text-white;
+  }
+
+  .sticky-menu {
+    @apply fixed !bg-white !bg-opacity-80 shadow-sticky backdrop-blur-sm dark:!bg-black dark:!bg-opacity-20;
+  }
+
+  .sticky-menu .menu-scroll {
+    @apply py-5 lg:py-2;
+  }
+
+  .sticky-menu #navbarToggler span {
+    @apply !bg-dark dark:!bg-white;
+  }
+
+  .sticky-menu #navbarCollapse li > a {
+    @apply text-dark hover:text-primary dark:text-white dark:hover:text-primary;
+  }
+
+  .sticky-menu .loginBtn {
+    @apply text-dark hover:text-primary dark:text-white dark:hover:text-primary;
+  }
+
+  .sticky-menu .signUpBtn {
+    @apply bg-primary text-white hover:bg-blue-dark;
+  }
+
+  .sticky-menu .mode-switcher {
+    @apply text-dark hover:text-primary dark:text-white dark:hover:text-primary;
+  }
+
+  .navbar-btn {
+    @apply flex items-center gap-2 text-white hover:text-primary dark:text-white dark:hover:text-primary;
+  }
+
+  #navbarCollapse li {
+    @apply static md:relative;
+  }
+
+  #navbarCollapse li.submenu-item {
+    @apply relative before:absolute before:right-4 before:top-[48%] before:mt-[-2px] before:h-[6px] before:w-[6px] before:-translate-y-1/2 before:rotate-45 before:border-r-2 before:border-t-2 before:border-black/50 hover:before:border-black dark:before:border-white/50 dark:hover:before:border-white;
+  }
+
+  .submenu {
+    @apply hidden;
+  }
+
+  .submenu-item:hover > .submenu {
+    @apply block;
+  }
+
+  .mobile-menu {
+    @apply block lg:hidden;
+  }
+
+  .mobile-menu.show {
+    @apply block;
+  }
+
+  .feature-box {
+    @apply group relative;
+  }
+
+  .feature-box .icon {
+    @apply relative z-10 mx-auto mb-10 flex h-[110px] w-[110px] items-center justify-center rounded-full bg-opacity-10 text-primary duration-300 group-hover:bg-primary group-hover:text-white;
+  }
+
+  .feature-box .icon.color-1 {
+    @apply bg-[#F97316];
+  }
+
+  .feature-box .icon.color-2 {
+    @apply bg-[#3BA2B8];
+  }
+
+  .feature-box .icon.color-3 {
+    @apply bg-[#22C55E];
+  }
+
+  .feature-box .icon::after {
+    @apply absolute left-0 top-0 -z-1 h-full w-full scale-105 rounded-full bg-[#F97316] opacity-0 duration-300 content-[''] group-hover:opacity-[0.1];
+  }
+
+  .feature-box .icon.color-2::after {
+    @apply bg-[#3BA2B8];
+  }
+
+  .feature-box .icon.color-3::after {
+    @apply bg-[#22C55E];
   }
 }
 
@@ -54,73 +158,8 @@
   }
 }
 
-.blog-details-docs {
-  @apply rounded-lg border border-white p-7.5 shadow-solid-3 transition-all dark:border-strokedark dark:bg-blacksection xl:p-12.5;
-}
-
-.blog-details p {
-  @apply mb-8 text-base leading-relaxed text-titlebgdark dark:text-waterloo;
-}
-
-.blog-details p strong {
-  @apply text-primary dark:text-waterloo;
-}
-.blog-details h3 strong,
-.blog-details h3 {
-  @apply mb-10 text-xl !font-semibold leading-tight text-black dark:text-white sm:text-2xl sm:leading-tight lg:text-xl lg:leading-tight xl:text-2xl xl:leading-tight;
-}
-
-.blog-details h4 strong,
-.blog-details h4 {
-  @apply text-xl !font-semibold leading-tight text-black dark:text-white sm:text-2xl sm:leading-tight lg:text-xl lg:leading-tight xl:text-2xl xl:leading-tight;
-}
-
-.blog-details h5 strong,
-.blog-details h5 {
-  @apply mb-3 text-lg !font-semibold leading-tight text-black dark:text-white sm:text-xl;
-}
-
-.blog-details h1 {
-  @apply mb-4 text-3xl !font-bold !leading-tight text-black dark:text-white sm:text-4xl md:text-[45px] lg:text-4xl xl:text-[45px];
-}
-.blog-details h2 strong,
-.blog-details h2 {
-  @apply mb-4 text-[26px] !font-bold !leading-tight text-black dark:text-white sm:text-3xl md:text-4xl;
-}
-
-.blog-details ul,
-.blog-details ol {
-  @apply mb-10 list-inside list-disc text-titlebgdark;
-}
-
-.blog-details li,
-.blog-details li {
-  @apply mb-2 text-base text-titlebgdark dark:text-waterloo;
-}
-
-.blog-details blockquote {
-  @apply relative z-10 mb-10 overflow-hidden rounded-sm bg-manatee p-8 text-center text-base font-medium italic text-black dark:bg-titlebgdark md:py-9 lg:px-10;
-}
-
-.blog-details blockquote::after {
-  content: "";
-  @apply absolute bottom-0 right-0 h-20 w-20 bg-[url(/images/blog/quote-shape-2.svg)] bg-contain bg-right-bottom bg-no-repeat;
-}
-
-.blog-details blockquote::before {
-  content: "";
-  @apply absolute left-0 top-0 h-[106px] w-[140px] bg-[url(/images/blog/quote-shape-1.svg)] bg-contain bg-left-top bg-no-repeat dark:bg-[url(/images/blog/quote-shape-1.svg)];
-}
-
-pre {
-  @apply relative mb-2 rounded-lg bg-strokedark px-4 py-2;
-}
-.prism-copy-button {
-  @apply absolute right-2 top-2 h-[26px] rounded bg-white px-4 text-primary;
-}
-
 .active-tab {
-  @apply bg-stroke text-black dark:bg-blackho dark:text-white;
+  @apply text-black dark:text-white;
 }
 
 /* Swiper zoom effect */
